--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinateria "La Gran Bodega"</title>
-    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <!-- <h1>Pre-entrega No. 1</h1>
+    <h1>Pre-entrega No. 1</h1>
     <span>Juan Carlos Palacios Contreras</span>
 
     <p>Catalogo de la vinateria "La Gran Bodega", donde el cliente podra buscar la bebida alcoholica de su preferencia.</p>
@@ -19,19 +18,7 @@
         El programa finalmente pregunta al usuario el tipo de bebida del cual quiera consultar existencias, si la busqueda del
         usuario coincide con las opciones disponibles, el usuario podra observar el catalogo en la consola, de lo contrario se le
         informara que su busqueda no esta disponible la tienda.
-    </p> -->
-    <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Acerca de nosotros</a></li>
-        <li style="float:right"><a href="#">Contacto</a></li>
-    </ul>
-    <div class="main-container" id="mainContainer">
-        <h1>Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
-        <h2>Contamos con una gran variedad de bebidas alcoholicas enteramente a su disposicion</h2>
-
-        <div class="card-container" id="cardContainer"></div>
-    </div>
+    </p>
 
     <script type="module" src="./js/main.js"></script>
 </body>
