Creating card components

--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <!-- <h1>Pre-entrega No. 1</h1>
-    <span>Juan Carlos Palacios Contreras</span>
-
-    <p>Catalogo de la vinateria "La Gran Bodega", donde el cliente podra buscar la bebida alcoholica de su preferencia.</p>
-
-    <p>
-        El programa pregunta el nombre del cliente. Posteriormente se pregunta la edad del usuario. 
-        Si el usuario es mayor de edad, podra acceder al catalogo. De lo contrario, se le notificara 
-        que la venta de bebidas alcoholicas es unicamente para mayores de edad, terminara la ejecucion del programa.
-        El programa finalmente pregunta al usuario el tipo de bebida del cual quiera consultar existencias, si la busqueda del
-        usuario coincide con las opciones disponibles, el usuario podra observar el catalogo en la consola, de lo contrario se le
-        informara que su busqueda no esta disponible la tienda.
-    </p> -->
     <ul>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Productos</a></li>
@@ -27,10 +14,53 @@
         <li style="float:right"><a href="#">Contacto</a></li>
     </ul>
     <div class="main-container" id="mainContainer">
-        <h1>Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
+        <h1 id="mainTitle">Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
         <h2>Contamos con una gran variedad de bebidas alcoholicas enteramente a su disposicion</h2>
 
-        <div class="card-container" id="cardContainer"></div>
+        <div class="card-container" id="cardContainer">
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+            <div class="card-item">
+                <img src="./assets/images/coco-basile.jpg"/>
+                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
+                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
+                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
+                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
+            </div>
+        </div>
     </div>
 
     <script type="module" src="./js/main.js"></script>
