Creating cards based on content

--- a/index.html
+++ b/index.html
@@ -17,50 +17,7 @@
         <h1 id="mainTitle">Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
         <h2>Contamos con una gran variedad de bebidas alcoholicas enteramente a su disposicion</h2>
 
-        <div class="card-container" id="cardContainer">
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-            <div class="card-item">
-                <img src="./assets/images/coco-basile.jpg"/>
-                <h4 class="text-align-center font-weight-600">Blue Label de Johnny Walker</h4>
-                <span class="text-align-center font-weight-500 descripcion">Es un elissir</span>
-                <span class="text-align-center font-weight-500">Categoria: Whisky</span>
-                <span class="text-align-center font-weight-500">Precio: $2000.00</span>
-            </div>
-        </div>
+        <div class="card-container" id="cardContainer"></div>
     </div>
 
     <script type="module" src="./js/main.js"></script>
