Creating card element

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
         <h1 id="mainTitle">Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
         <h2>Contamos con una gran variedad de bebidas alcoholicas enteramente a su disposicion</h2>
 
+        <div class="carrito-container" id="carritoContainer">
+            <div class="carrito-card-container">
+                <h4>Tu carrito</h4>
+                <div class="carrito-card">
+                    <img src="/assets/images/absolut-azul.jpg" />
+                    <div class="card-description">
+                        <h5>Mestro Dobel Diamante 700 ml</h5>
+                        <span>$29399.00</span>
+                        <button>Eliminar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="card-container" id="cardContainer"></div>
     </div>
 
