Ahora el usuario puede cerrar sesion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Productos</a></li>
         <li><a href="#">Acerca de nosotros</a></li>
-        <li style="float:right"><a href="#">Contacto</a></li>
+        <li id="cerrarSesionLink" style="float:right"><a href="#">Cerrar Sesion</a></li>
     </ul>
     <div class="main-container" id="mainContainer">
         <h1 id="mainTitle">Bienvenido a la pagina de la vinateria "La Gran Bodega"</h1>
